--- a/main.css
+++ b/main.css
@@ -120,3 +120,9 @@ footer li img {
   width: 32px;
   height: 32px;
 }
+
+.center-block {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+ }
