--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ header p {
 .jumbotron {
   display: flex;
   align-items: center;
-  background-image: url('http://www.photos-public-domain.com/wp-content/uploads/2011/11/kelly-green-paper-texture-with-flecks.jpg');
+  background-image: url('background for css.png');
   background-size: cover;
   color: #ffffff;
   height: 400px;
