--- a/main.css
+++ b/main.css
@@ -7,7 +7,12 @@ header {
   padding: 20px 0;
 }
 
-header .row,
+header .row {
+  display: flex;
+  align-items: center;
+  margin: 50px 0px;
+}
+
 footer .row {
   display: flex;
   align-items: center;
