--- a/main.css
+++ b/main.css
@@ -74,7 +74,7 @@ section .row img {
 
 .btn.btn-primary:hover {
   color: Black;
-  background-color: Gold;
+  background-color: #4CAF50;
 }
 
 .btn-secondary {
@@ -139,4 +139,57 @@ hr.style-two {
     border: 0;
     height: 1px;
     background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
+}
+
+
+
+/*Answer Dropdown*/
+/* Dropdown Button */
+.dropbtn {
+    background-color: white;
+    color: black;
+    font-size: 17px;
+    font-weight: 500;
+    font-style: oblique; 
+    border: none;
+    cursor: pointer;
+}
+
+/* The container <div> - needed to position the dropdown content */
+.dropdown {
+    position: relative;
+    display: inline-block;
+}
+
+/* Dropdown Content (Hidden by Default) */
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+/* Links inside the dropdown */
+.dropdown-content a {
+    color: black;
+    font-weight: 500;
+    padding: 12px 60px;
+    text-decoration: none;
+    text-align: center;
+    display: block;
+}
+
+/* Change color of dropdown links on hover */
+.dropdown-content a:hover {background-color: #4CAF50}
+
+/* Show the dropdown menu on hover */
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Change the background color of the dropdown button when the dropdown content is shown */
+.dropdown:hover .dropbtn {
+    background-color: #4CAF50;
 }
